--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logoDev.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Desarrollador Web">
+    <meta name="autor" content="Jair ALejandro Gavilanez Panchana">
+    <meta name="keywords" content="Freelancer, Desarrollador Web, Diseñador Web, Desarrollador Ecuador, Web Development, Programador, Programador Ecuador, Programdor Web">
     <title>Larson </title>
   </head>
   <body class="background">
